[package]
name = "telegram-escape"
version = "0.1.0"
authors = ["Vlad Stepanov <utterstep@hey.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "21"
regex = "1.7"

[dev-dependencies]
pretty_assertions = "1.3"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }

[patch.crates-io]
pulldown-cmark-to-cmark = { git = "https://github.com/utterstep/pulldown-cmark-to-cmark", branch = "custom_special_chars" }
