[package]
name = "telegram-escape"
version = "0.2.4"
description = "Escape text for Telegram's MarkdownV2 format"
license-file = "LICENSE"
homepage = "https://github.com/utterstep/telegram-escape"
authors = ["Vlad Stepanov <utterstep@hey.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
python = []

[dev-dependencies]
pretty_assertions = "1.3"
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
