[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "telegram-escape"
version = "0.2.1"
description = "Escape text for Telegram's MarkdownV2 formatting"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Vlad Stepanov", email = "utterstep@hey.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/utterstep/telegram-escape"

[tool.maturin]
features = ["python"]
module-name = "telegram_escape._core"
python-source = "python"
